--- a/index.html
+++ b/index.html
@@ -7,7 +7,14 @@
     <title>Odin Project: Recipes!</title>
 </head>
 <body>
-    <h1>Odin Recipes!</h1>
-    
+    <h1>Odin Recipes</h1>
+    <link rel="stylesheet" href="styles.css">
+    <h4>By EdwardDevelops</h4>
+    <h6>Let's Take A Look At Some Yummy Recipes!
+    </h6>
+    <img src="http://cdn.cnn.com/cnnnext/dam/assets/140430115517-06-comfort-foods.jpg" alt="4th Of July Boat Day">
+   <br><a href="/breakfast burrito.html">Breakfast Burroto</a>
+   <br><a href="/Jamaican Me Crazy.html">Jamaican Me Crazy</a>
+   <br><a href="/Pizza.html">Pizza</a>
 </body>
 </html>
